# pdf_downloader

./: .gitignore  CMakePresets.json  README.md  dummy.xlsx  vcpkg.json
.github/workflows/: build.yml
PDF_Downloader/: CMakeBuildScript.ps1  CMakeLists.txt  vcpkg.json
PDF_Downloader/header/: ExcelWorker.h  EzPDFDownloader.h  PDF_Downloader.h
PDF_Downloader/src/: ExcelWorker.cpp  EzPDFDownloader.cpp  main.cpp
header/: EzPDFDownloader.h  PDF_Downloader.h
src/: EzPDFDownloader.cpp
